# ur5e_robotiq

./: .gitmodules  README.md
install/: local_setup.sh  setup.sh
install/robotiq_controllers/share/robotiq_controllers/: local_setup.sh  package.sh
install/robotiq_description/share/robotiq_description/: package.sh
install/ur5e_description/share/ur5e_description/: local_setup.sh  package.sh
install/ur5e_description/share/ur5e_description/launch/: display_ur_camera.launch.py  ur_sim_control.launch.py  ur_sim_moveit.launch.py
install/ur5e_description/share/ur5e_description/rviz/: display.rviz  display_camera.rviz
install/ur5e_description/share/ur5e_description/urdf/: robotiq_2f_85_macro.urdf.xacro  ur.urdf.xacro
install/ur_description/share/ur_description/: package.sh
install/ur_moveit_config/share/ur_moveit_config/: package.sh
install/ur_moveit_config/share/ur_moveit_config/config/: joint_limits.yaml  moveit.rviz  ros2_controllers.yaml  ur.srdf  ur.urdf.xacro
install/ur_simulation_gz/share/ur_simulation_gz/: local_setup.sh  package.sh
log/: latest_build
ur5e_description/: CMakeLists.txt  package.xml
ur5e_description/config/: ur_controllers.yaml
ur5e_description/launch/: ur_sim_moveit.launch.py
ur5e_description/meshes/sensors/camera/: kinetic.dae
ur5e_description/urdf/: camera.xacro  ur.urdf.xacro
ur_moveit_config/: .setup_assistant  package.xml
ur_moveit_config/config/: initial_positions.yaml  moveit_controllers.yaml  ros2_controllers.yaml  ur.urdf.xacro
ur_moveit_config/launch/: gazebo_demo.launch.py  static_virtual_joint_tfs.launch.py
(+11 files in other folders)
