<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur5e_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="hasanfashtook5000@gmail.com">hasan-fashtouk</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>gz_ros2_camera</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ur_controllers</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
